service component prepared

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
 .App{
     font-family: 'Open Sans Condensed', sans-serif;
     font-family: 'Redressed', cursive;
+    scroll-behavior: smooth;
+
 }
