review component intigrated and also fixed some mobile responsiveness

--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,6 @@
     font-family: 'Open Sans Condensed', sans-serif;
     font-family: 'Redressed', cursive;
     scroll-behavior: smooth;
+    font-size:1.5rem;
 
 }
