--- a/src/components/review/review.style.css
+++ b/src/components/review/review.style.css
@@ -7,7 +7,7 @@
 .first{
     background-color: white;
     z-index: 1;
-    width: 250px;
-    height: 250px;
+    min-width: 250px;
+    min-height: 250px;
     border-radius: 0.5rem;
 }
