--- a/src/components/Navbar/navbar.style.css
+++ b/src/components/Navbar/navbar.style.css
@@ -3,7 +3,7 @@
 }
 .styled-box{
     height: 250px;
-    width:400px;
+    min-width:500px;
     position:absolute;
     top:-20px;
     right:2px;
@@ -20,7 +20,7 @@
     height: 180px;
     position:absolute;
     top: 79px;
-    left: 120px;
+    left: 180px;
 }
 .name{
   color:#19EAC4;
